# strudel_of_lilypond

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: publish.yml
demo/: .gitignore  demo.html  demo.ly  demo.md  seq1.yml  upload-library.sh
src/: lib.rs  main.rs  tests.rs
src/sequencer/: lilypond.rs  mod.rs  model.rs
