[package]
name = "strudel-of-lilypond"
version = "0.2.0"
edition = "2024"
description = "Convert LilyPond music notation to Strudel live coding patterns"
license = "MIT"
repository = "https://github.com/laurentcarrie/strudel_of_lilypond"
keywords = ["lilypond", "strudel", "music", "notation", "live-coding"]
categories = ["multimedia::audio", "parser-implementations"]

[[bin]]
name = "strudel-of-lilypond"
path = "src/main.rs"

[dependencies]
regex = "1"

