[package]
name = "strudel-of-lilypond"
version = "0.4.1"
edition = "2024"
description = "Convert LilyPond music notation to Strudel live coding patterns"
license = "MIT"
repository = "https://github.com/laurentcarrie/strudel_of_lilypond"
keywords = ["lilypond", "strudel", "music", "notation", "live-coding"]
categories = ["multimedia::audio", "parser-implementations"]

[[bin]]
name = "strudel-of-lilypond"
path = "src/main.rs"

[[bin]]
name = "strudel-of-lilypond-sequence"
path = "src/bin/sequence.rs"

[dependencies]
argh = "0.1"
pathdiff = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

